--- a/Views/Producto/Create.cshtml
+++ b/Views/Producto/Create.cshtml
@@ -11,17 +11,23 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create"   >
             @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="Id_Producto" class="control-label"></label>
+            <input asp-for="Id_Producto" class="form-control" />
+            <span asp-validation-for="Id_Producto" class="text-danger"></span>
+        </div>*@
+            
             <div class="form-group">
-                <label asp-for="Id_Producto" class="control-label"></label>
-                <input asp-for="Id_Producto" class="form-control" />
-                <span asp-validation-for="Id_Producto" class="text-danger"></span>
-            </div>*@
-            <div class="form-group">
-                <label asp-for="Producto_" class="control-label"></label>
+                <label asp-for="Producto_" class="control-label">NOMBRE PRODUCTO</label>
                 <input asp-for="Producto_" class="form-control" />
                 <span asp-validation-for="Producto_" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Activo" class="control-label"></label>
+                <input asp-for="Activo" class="form-control" />
+                <span asp-validation-for="Activo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
