--- a/Views/Producto/EditarProducto.cshtml
+++ b/Views/Producto/EditarProducto.cshtml
@@ -11,17 +11,27 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action ="EditarProducto" >
+        <form asp-action="EditarProducto">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id_Producto" class="control-label">ID</label>
+            <div class="form-group" hidden="hidden">
+                <label asp-for="Id_Producto" class="control-label" >ID</label>
                 <input asp-for="Id_Producto" class="form-control" />
                 <span asp-validation-for="Id_Producto" class="text-danger"></span>
+            </div>
+            <div class="form-group" >
+                <label asp-for="Codigo"  class="control-label">CODIGO</label>
+                <input asp-for="Codigo" readonly ="readonly" class="form-control" />
+                <span asp-validation-for="Codigo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Producto_" class="control-label">PRODUCTO</label>
                 <input asp-for="Producto_" class="form-control" />
                 <span asp-validation-for="Producto_" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Activo" class="control-label">ACTIVO</label>
+                <input asp-for="Activo" class="form-control" />
+                <span asp-validation-for="Activo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Aplicar" class="btn btn-primary" />
