--- a/Views/Kardex/Index.cshtml
+++ b/Views/Kardex/Index.cshtml
@@ -10,14 +10,15 @@
 <h1>Existencias</h1>
 
 <div class="container mt-3">
-    <h2>Filterable</h2>
+    <h3>Buscar Producto</h3>
     
-    <input class="form-control" id="myInput" type="text" placeholder="Search..">
+    <input class="form-control col-4" id="myInput" type="text" placeholder="Search..">
     <br>
-    <table class="table table-striped table-condensed">
+    <table class="table table-responsive table-striped ">
+
         <thead>
             <tr>
-                <th>
+                <th hidden ="hidden">
                     @Html.DisplayNameFor(model => model.id_Kardex)
                 </th>
                 <th>
@@ -42,7 +43,7 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>
+                    <td hidden ="hidden">
                         @Html.DisplayFor(modelItem => item.id_Kardex)
                     </td>
                     <td>
