--- a/Views/Producto/EliminarProducto.cshtml
+++ b/Views/Producto/EliminarProducto.cshtml
@@ -12,11 +12,11 @@
 <div class="container">
     <h4>Producto</h4>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-2 ">
+    <dl class="row" >
+        <dt class="col-sm-2 " hidden ="hidden">
             ID
         </dt>
-        <dd class="col-sm-10 active">
+        <dd class="col-sm-10 active" hidden ="hidden">
             @Html.DisplayFor(model => model.Id_Producto)
         </dd>
         <dt class="col-sm-2 ">
