--- a/Views/Movimientos/Index.cshtml
+++ b/Views/Movimientos/Index.cshtml
@@ -5,17 +5,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Movimiento E/S</h1>
 
 <p>
     <a asp-action="Create">Nuevo Movimiento</a>
 </p>
-<h3>Buscar Movimiento</h3>
+<h3>Buscar C</h3>
 
 <input class="form-control col-4" id="myInput" type="text" placeholder="Search..">
 <br>
 <div class="table-responsive">
-    <table class="table">
+    <table class="table table-bordered">
         <thead>
             <tr>
                 <th hidden="hidden">
@@ -77,6 +77,7 @@
         </tbody>
     </table>
 </div>
+
 <script>
     $(document).ready(function () {
         $("#myInput").on("keyup", function () {
