--- a/Views/Movimientos/DetalleMovimiento.cshtml
+++ b/Views/Movimientos/DetalleMovimiento.cshtml
@@ -5,17 +5,26 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Detalle Movimiento</h1>
+<h4>Detalle Movimiento</h4>
 
+<div>
+    <h2> @ViewBag.Mensaje</h2>
+</div>
 
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="">
+        <form>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group" hidden="hidden">
+                <label class="control-label"> ID</label>
+                <input class="form-control" id="disabledInput" type="datetime" placeholder=" @ViewBag.id_movimiento" disabled>
+
+
+            </div>
             <div class="form-group">
                 <label class="control-label"> Fecha</label>
-                <input class="form-control" id="disabledInput" type="text" placeholder=" @ViewBag.fecha" disabled>
+                <input class="form-control" id="disabledInput" type="datetime" placeholder=" @ViewBag.fecha" disabled>
 
             </div>
             <div class="form-group">
@@ -33,85 +42,101 @@
                 <input class="form-control" id="disabledInput" type="text" placeholder=" @ViewBag.Estatus" disabled>
 
             </div>
+
         </form>
+        @using (Html.BeginForm())
+        {
+            if (ViewBag.Estatus != "Procesado")
+            {
+                <p>
+                    <input type="submit" value="Cancelar Movimiento" disabled="disabled" class="btn btn-danger" />
+
+                </p>
+            }
+            else
+            {
+                <p>
+                    <input type="submit" value="Cancelar Movimiento"  class="btn btn-danger" />
+
+                </p>
+            }
+        }
     </div>
 </div>
 <h4>Detalle</h4>
-<table class="table">
-    <thead>
-        <tr>
-           
-            <th>
-                @Html.DisplayNameFor(model => model.Cantidad)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Precio)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.total)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.id_producto)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Codigo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Producto)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.id_TipoMovimiento)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NombreMovimiento)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Estatus)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+<div class="table-responsive">
+    <table class="table table-striped table-bordered">
+        <thead>
             <tr>
-                
-                <td>
-                    @Html.DisplayFor(modelItem => item.Cantidad)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Precio)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.total)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.id_producto)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Codigo)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Producto)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.id_TipoMovimiento)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NombreMovimiento)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Estatus)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.Codigo)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Producto)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Cantidad)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Precio)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.total)
+                </th>
+                <th hidden="hidden">
+                    @Html.DisplayNameFor(model => model.id_producto)
+                </th>
+
+                <th hidden="hidden">
+                    @Html.DisplayNameFor(model => model.id_TipoMovimiento)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.NombreMovimiento)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Estatus)
+                </th>
+
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Codigo)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Producto)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Cantidad)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Precio)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.total)
+                    </td>
+                    <td hidden="hidden">
+                        @Html.DisplayFor(modelItem => item.id_producto)
+                    </td>
+
+                    <td hidden="hidden">
+                        @Html.DisplayFor(modelItem => item.id_TipoMovimiento)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.NombreMovimiento)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Estatus)
+                    </td>
+
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
