--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -10,10 +10,14 @@
 <p>
     <a asp-action="Create">Crear nuevo producto</a>
 </p>
+<h3>Buscar Producto</h3>
+
+<input class="form-control col-4" id="myInput" type="text" placeholder="Search..">
+<br>
 <table class="table table-responsive table-striped ">
     <thead>
         <tr>
-            <th hidden ="hidden">
+            <th hidden="hidden">
                 ID @* @Html.DisplayNameFor(model => model.Id_Producto)*@
             </th>
             <th>
@@ -28,26 +32,27 @@
             <th>ACCION</th>
         </tr>
     </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td hidden ="hidden">
-                @Html.DisplayFor(modelItem => item.Id_Producto)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Codigo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Producto_)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Activo , new  { @class = "form-check" })
-            </td>
-            <td >
-                @Html.ActionLink("Editar", "EditarProducto", new { id = item.Id_Producto   }, new { @class = "btn btn-primary" }) |
-                @Html.ActionLink("Eliminar", "EliminarProducto", new { id = item.Id_Producto }, new { @class = "btn btn-danger" })
-            </td>
-        </tr>
-}
+    <tbody id="myTable">
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td hidden="hidden">
+                    @Html.DisplayFor(modelItem => item.Id_Producto)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Codigo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Producto_)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Activo, new { @class = "form-check" })
+                </td>
+                <td>
+                    @Html.ActionLink("Editar", "EditarProducto", new { id = item.Id_Producto }, new { @class = "btn btn-primary" }) |
+                    @Html.ActionLink("Eliminar", "EliminarProducto", new { id = item.Id_Producto }, new { @class = "btn btn-danger" })
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
